Added Document Scanner

--- a/CloudDocs/ru.lproj/Localizable.strings
+++ b/CloudDocs/ru.lproj/Localizable.strings
@@ -99,3 +99,4 @@
 "Commissariat" = "Коммиссариат";
 "Policy number" = "Номер полиса";
 "Policy cost" = "Стоимость полиса";
+"Add scan of document" = "Добавить скан документа";
