--- a/CloudDocs/Views/ru.lproj/Main.strings
+++ b/CloudDocs/Views/ru.lproj/Main.strings
@@ -131,5 +131,5 @@
 /* Class = "UIBarButtonItem"; title = "Sign Out"; ObjectID = "f5r-1Z-gb2"; */
 "f5r-1Z-gb2.title" = "Выйти";
 
-/* Class = "UIButton"; configuration.title = "Edit photo"; ObjectID = "g2Q-GU-jEz"; */
-"g2Q-GU-jEz.configuration.title" = "Изменить фото";
+/* Class = "UIButton"; configuration.title = "Forgotten your password?"; ObjectID = "9Jy-bN-Hv7"; */
+"9Jy-bN-Hv7.configuration.title" = "Забыли свой пароль?";
