--- a/CloudDocs/ru.lproj/Localizable.strings
+++ b/CloudDocs/ru.lproj/Localizable.strings
@@ -113,3 +113,4 @@
 "Please, delete all your documents" = "Пожалуйста, удалите все Ваши документы";
 "Please, check your e-mail" = "Пожалуйста, проверьте Вашу эл. почту";
 "Optional" = "Опционально";
+"Unknown" = "Неизвестно";
