--- a/CloudDocs/ru.lproj/Localizable.strings
+++ b/CloudDocs/ru.lproj/Localizable.strings
@@ -118,3 +118,12 @@
 "There is no user record corresponding to this identifier. The user may have been deleted." = "Нет записи пользователя, соответствующей этой эл. почте. Возможно, пользователь был удален.";
 "The password is invalid or the user does not have a password." = "Пароль недействителен или у пользователя нет пароля.";
 "Re-authentication required" = "Требуется повторная аутентификация";
+"Try Premium" = "Попробуйте премиум";
+"PREMIUM" = "ПРЕМИУМ";
+"FREE" = "БЕСПЛАТНЫЙ";
+"Unlimited documents" = "Добавляйте неограниченное количество документов";
+"Share your documents with CloudDocs Sharing" = "Делитесь своими документами с CloudDocs Sharing";
+"Saving photo of document" = "Сохраняйте фото документа";
+"Saving scan of document" = "Сохраняйте скан документа";
+"Coming Soon" = "Скоро";
+"This feature is currently not available." = "В настоящее время эта функция недоступна.";
