CloudDocs Premium Trial

--- a/CloudDocs/ru.lproj/Localizable.strings
+++ b/CloudDocs/ru.lproj/Localizable.strings
@@ -125,6 +125,7 @@
 "Share your documents with CloudDocs Sharing" = "Делитесь своими документами с CloudDocs Sharing";
 "Saving photo of document" = "Сохраняйте фото документа";
 "Saving scan of document" = "Сохраняйте скан документа";
-"Coming Soon" = "Скоро";
-"This feature is currently not available." = "В настоящее время эта функция недоступна.";
 "Congratulations! Your first document has been added. In the free version, you can add 2 more documents. To use all the features of CloudDocs, you can try premium." = "Поздравляем! Ваш первый документ добавлен. В бесплатной версии можно добавить еще 2 документа. Чтобы использовать все функции CloudDocs, Вы можете попробовать премиум версию.";
+"You are subscribed!" = "Вы подписаны!";
+"Cancel subscription" = "Отменить подписку";
+"Your subscription is valid until" = "Ваша подписка действительна до";
